crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__non_hyphen_ascii_character_reference_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"&¬;\"####)"
---
[
    Token {
        data: "&",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "¬;",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
