crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__partial_entity_match_at_end_of_file.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"I'm &no\")"
---
[
    Token {
        data: "I'm &no",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
